# ComfyUI_SVFR

./: README.md  SVFR_node.py  __init__.py  example.json  infer.py  node_utils.py  pyproject.toml  requirements.txt
src/dataset/face_align/: align.py
src/models/svfr_adapter/: unet_3d_svd_condition_ip.py
src/pipelines/: pipeline.py
